Create photo and contact pages

--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,11 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Croissant</title>
+    <title>Contact</title>
   </head>
   <body>
-    <h1>History of the Croissant</h1>
-    <h2>Is the Croissant Really French?</h2>
-    <h3>A brief history of the croissant - from kipfel to Cronut</h3>
-    <a href="index.html">Homepage</a>
+    <h1>This is the contact page</h1>
     <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/index.html">Homepage</a>
   </body>
 </html>
