Adding content to pages

--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Croissant</title>
+    <title>History of Croissant</title>
   </head>
   <body>
     <h1>History of the Croissant</h1>
     <h2>Is the Croissant Really French?</h2>
-    <h3>A brief history of the croissant - from kipfel to Cronut</h3>
+    <h3>🥐 A brief history of the croissant - from kipfel to Cronut 🥐</h3>
+    <p>
+      One bite of a croissant just pulled from the oven at Michel Lyczak’s
+      bakery in the southern Parisian suburb of Malakoff is bliss: a satisfying
+      crunch and scattering of crumbs, the indulgent mouthfeel of butter wrapped
+      in the overwhelming sensation of lightness. Few foods are as culturally
+      iconic as this flaky breakfast food, so quintessentially French that many
+      English speakers defer to its native pronunciation (krwa-sohn). Yet as
+      recently as the 19th century, the French viewed the croissant as a foreign
+      novelty, sold only in special Viennese bakeries in the pricier parts of
+      Paris. And how it came to France in the first place remains obscured by
+      layer upon layer of legend.
+    </p>
     <a href="index.html">Homepage</a>
     <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/contact.html">Contact</a>
   </body>
 </html>
