--- a/photo.html
+++ b/photo.html
@@ -8,8 +8,12 @@
     <title>Photo</title>
   </head>
   <body>
-    <h1>This is the PHOTO page</h1>
+    <h1>This is the picture of a croissant 🥐</h1>
+    <img src="/images/croissant.jpg" alt="Croissant" />
+    <br />
+
     <a href="/index.html">Homepage</a>
-    <a href="/contact.html">Contact Me</a>
+    <a href="/photo.html">Photo</a>
+    <a href="/contact.html">Contact</a>
   </body>
 </html>
