--- a/contact.html
+++ b/contact.html
@@ -8,8 +8,13 @@
     <title>Contact</title>
   </head>
   <body>
-    <h1>This is the contact page</h1>
-    <a href="/photo.html">Photo</a>
+    <h1>🥐 Contact Us</h1>
+    <p>
+      To contact croissant.com, please email us at hello@croissant.com for more
+      info
+    </p>
     <a href="/index.html">Homepage</a>
+    <a href="/photo.html">Photo</a>
+    <a href="/contact.html">Contact</a>
   </body>
 </html>
