--- a/contact.html
+++ b/contact.html
@@ -10,8 +10,8 @@
   <body>
     <h1>🥐 Contact Us</h1>
     <p>
-      To contact croissant.com, please email us at hello@croissant.com for more
-      info
+      To contact croissant.com, please email us at
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
     </p>
     <a href="/index.html">Homepage</a>
     <a href="/photo.html">Photo</a>
