--- a/index.html
+++ b/index.html
@@ -21,10 +21,12 @@
       recently as the 19th century, the French viewed the croissant as a foreign
       novelty, sold only in special Viennese bakeries in the pricier parts of
       Paris. And how it came to France in the first place remains obscured by
-      layer upon layer of legend.
+      layer
     </p>
-    <a href="index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <footer>
+      <a href="index.html">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </footer>
   </body>
 </html>
