--- a/photo.html
+++ b/photo.html
@@ -12,8 +12,10 @@
     <img src="/images/croissant.jpg" alt="Croissant" />
     <br />
 
-    <a href="/index.html">Homepage</a>
-    <a href="/photo.html">Photo</a>
-    <a href="/contact.html">Contact</a>
+    <footer>
+      <a href="index.html">Homepage</a>
+      <a href="/photo.html">Photo</a>
+      <a href="/contact.html">Contact</a>
+    </footer>
   </body>
 </html>
