--- a/photo.html
+++ b/photo.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>Photo</title>
+    <title>History of Croissant - Picture</title>
   </head>
   <body>
     <h1>This is the picture of a croissant 🥐</h1>
