Adding description to pages

--- a/contact.html
+++ b/contact.html
@@ -6,6 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="/src/style.css" />
     <title>History of Croissant -Contact</title>
+    <meta
+      name="description"
+      content="This site narrate a brief history of the creation of a croissant and its origen. Contact for more information."
+    />
   </head>
   <body>
     <h1>🥐 Contact Us</h1>
