--- a/photo.html
+++ b/photo.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="description"
+      content="This site narrate a brief history of the creation of a croissant and its origen. Image of croissant."
+    />
     <link rel="stylesheet" href="/src/style.css" />
     <title>History of Croissant - Picture</title>
   </head>
