Adding title Home to index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
       content="This site narrate a brief history of the creation of a croissant and its origen. You can find images and contact info."
     />
     <link rel="stylesheet" href="/src/style.css" />
-    <title>History of Croissant</title>
+    <title>History of Croissant - Home</title>
   </head>
   <body>
     <h1>History of the Croissant</h1>
