--- a/contact.html
+++ b/contact.html
@@ -15,12 +15,14 @@
     <h1>🥐 Contact Us</h1>
     <p>
       To contact croissant.com, please email us at
-      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more info
+      <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more
+      info. We are open: Monday through Saturday From: 8am to 8pm. Come to visit
+      us, and enjoy some of the most exquisit croissant
     </p>
     <footer>
-      <a href="index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/contact.html" title="Contact us">Contact</a>
     </footer>
   </body>
 </html>
