--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
       layer
     </p>
     <footer>
-      <a href="index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/contact.html" title="Contact us">Contact</a>
     </footer>
   </body>
 </html>
