--- a/photo.html
+++ b/photo.html
@@ -17,9 +17,9 @@
     <br />
 
     <footer>
-      <a href="index.html">Homepage</a>
-      <a href="/photo.html">Photo</a>
-      <a href="/contact.html">Contact</a>
+      <a href="index.html" title="Home">Homepage</a>
+      <a href="/photo.html" title="Croissant Photo">Photo</a>
+      <a href="/contact.html" title="Contact us">Contact</a>
     </footer>
   </body>
 </html>
