--- a/contact.html
+++ b/contact.html
@@ -16,9 +16,15 @@
     <p>
       To contact croissant.com, please email us at
       <a href="mailto:hello@croissant.com">hello@croissant.com</a> for more
-      info. We are open: Monday through Saturday From: 8am to 8pm. Come to visit
-      us, and enjoy some of the most exquisit croissant
+      info.
+      <br />
+      We are open: Monday through Saturday
+      <br />
+      From: 8am to 8pm.
+      <br />
+      Come to visit us, and enjoy some of the most exquisit croissant
     </p>
+
     <footer>
       <a href="index.html" title="Home">Homepage</a>
       <a href="/photo.html" title="Croissant Photo">Photo</a>
